# django-oscar-bundles

./: .cz.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.rst  client.dockerfile  docker-compose.yml  requirements.txt  server.dockerfile  setup.py  test.sh  tox.ini
.hooks/: pre-commit
bundles/: __init__.py  config.py
bundles/api/: app.py  serializers.py  views.py
bundles/dashboard/: app.py  fields.py  forms.py  views.py
bundles/templates/bundles/dashboard/: bundle_create.html  bundle_related_products.html  bundle_update.html
bundles/templatetags/: bundle_dashboard_tags.py
bundles/tests/: test_api.py
client/: .eslintrc.js  .eslintrc.json  entrypoint.sh  eslint.config.mjs  jest.config.js  package-lock.json  package.json  postcss.config.js  tsconfig.json  tslint.json  webpack.config.js
client/src/: bundles.tsx  locale
client/src/bundles/: BundleGroupTable.tsx
client/src/bundles/molecules/: BundleGroupEditForm.scss  BundleGroupEditForm.tsx  BundleGroupSearchForm.tsx  BundleGroupTableRow.tsx
client/src/bundles/molecules/elements/: BundleGroupEditForm_Actions.tsx  BundleGroupEditForm_ConcreteBundles.tsx  BundleGroupEditForm_MetaFields.tsx  BundleGroupEditForm_ParentProducts.tsx  BundleGroupEditForm_UserConfigurableBundles.tsx
client/src/bundles/molecules/elements/__tests__/: BundleGroupEditForm_Actions.test.tsx  BundleGroupEditForm_ConcreteBundles.test.tsx  BundleGroupEditForm_MetaFields.test.tsx  BundleGroupEditForm_ParentProducts.test.tsx  BundleGroupEditForm_UserConfigurableBundles.test.tsx
client/src/bundles/molecules/elements/__tests__/__snapshots__/: BundleGroupEditForm_Actions.test.tsx.snap  BundleGroupEditForm_ConcreteBundles.test.tsx.snap  BundleGroupEditForm_MetaFields.test.tsx.snap  BundleGroupEditForm_ParentProducts.test.tsx.snap  BundleGroupEditForm_UserConfigurableBundles.test.tsx.snap
client/src/utils/: api.interfaces.ts  api.ts  models.interfaces.ts  models.ts
client/test/: setup-django-i18n.js  setup.ts
oscarbundles/: __init__.py  models.py
oscarbundles/api/: app.py  serializers.py  views.py
oscarbundles/dashboard/: app.py  forms.py  views.py
oscarbundles/templates/oscarbundles/dashboard/: _product_list.html  _progress.html  bundle_delete.html  bundle_detail.html  bundle_list.html  bundle_related_products.html  bundle_update.html
oscarbundles/templates/oscarbundles/dashboard/bundle_group/: _progress.html  bundles.html  create.html  delete.html  detail.html  list.html  update.html
oscarbundles/tests/: test_api.py
sandbox/: settings.py  urls.py
server/: MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
server/oscarbundles/: models.py
server/oscarbundles/api/: apps.py  serializers.py  views.py
server/oscarbundles/dashboard/: apps.py  views.py
server/oscarbundles/locale/es/LC_MESSAGES/: djangojs.po
server/oscarbundles/migrations/: 0001_squashed_0016_auto_20190906_1645.py  0002_auto_20160902_1106.py  0004_auto_20180315_1349.py  0007_auto_20180318_1919.py  0008_auto_20180318_1933.py  0009_auto_20180319_1116.py  0010_auto_20180319_1116.py  0012_auto_20180319_1613.py  0015_auto_20190826_1326.py
server/oscarbundles/static/oscarbundles/: bundles.css.map  bundles.js  bundles.js.map  vendor.js  vendor.js.LICENSE.txt  vendor.js.map  webpack-stats.json
server/oscarbundles/tests/: test_api.py
server/sandbox/: settings.py  urls.py
server/src/oscarbundles/: __init__.py  admin.py  apps.py  config.py  models.py
server/src/oscarbundles/api/: __init__.py  app.py  apps.py  serializers.py  views.py
server/src/oscarbundles/dashboard/: __init__.py  app.py  apps.py  views.py
server/src/oscarbundles/locale/es/LC_MESSAGES/: django.po  djangojs.po
server/src/oscarbundles/migrations/: 0001_initial.py  0001_squashed_0016_auto_20190906_1645.py  0002_auto_20160902_1106.py  0002_bundlegroup_is_active.py  0003_alter_bundlegroup_bundle_type.py  0003_alter_bundlegroup_is_active.py  0003_auto_20180315_1137.py  0004_alter_bundlegroup_bundle_type.py  0004_auto_20180315_1349.py  0005_alter_bundlegroup_bundle_type.py  0005_bundleentry.py  0006_auto_20180318_1907.py  0007_auto_20180318_1919.py  0008_auto_20180318_1933.py  0009_auto_20180319_1116.py  0010_auto_20180319_1116.py  0011_auto_20180319_1121.py  0012_auto_20180319_1613.py  0013_bundlegroup_headline.py  0014_auto_20190305_0420.py  0015_auto_20190826_1326.py  0016_auto_20190906_1645.py
server/src/oscarbundles/static/oscarbundles/: bundles.css  bundles.css.map  bundles.js  bundles.js.map  vendor.js  vendor.js.LICENSE.txt  vendor.js.map  webpack-bundle-analyzer.html  webpack-stats.json
server/src/oscarbundles/templates/oscarbundles/dashboard/bundlegroup/: bundlegroup-spa.html
server/src/oscarbundles/tests/: test_api.py
src/oscarbundles/: admin.py  models.py
src/oscarbundles/api/: app.py  serializers.py  views.py
src/oscarbundles/migrations/: 0001_initial.py  0002_auto_20160902_1106.py
src/oscarbundles/templates/oscarbundles/dashboard/: bundle_create.html
src/oscarbundles/templates/oscarbundles/dashboard/bundle_group/: bundles.html  delete.html  detail.html
src/oscarbundles/templatetags/: bundle_dashboard_tags.py
