[build-system]
requires = [ "poetry-core>=1.9.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-oscar-bundles"
version = "2.2.2"
description = "An extension on top of django-oscar providing product bundle functionality."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bundles/"
repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-bundles/"
license = "ISC"

[[tool.poetry.packages]]
include = "oscarbundles"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.16"
django-oscar = "3.2.5"
django-oscar-api = "3.3.0"
phonenumbers = "^8.13.45"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
flake8 = "^7.1.1"
ipdb = "^0.13.13"
psycopg2-binary = "^2.9.9"
sorl-thumbnail = "^12.11.0"
tox = "^4.20.0"
unittest-xml-reporting = "^3.2.0"
